Project 1/force-app/main/default/objects/Package__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if package has insurance</inlineHelpText>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>