Project 1/force-app/main/default/objects/Package__c/fields/Receiver__c.field-meta.xml
<CustomField>
    <fullName>Receiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Packages (Receiver)</relationshipLabel>
    <relationshipName>Incoming</relationshipName>
    <type>Lookup</type>
</CustomField>