Project 1/force-app/main/default/objects/Package__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Packages (Sender)</relationshipLabel>
    <relationshipName>Outgoing</relationshipName>
    <type>Lookup</type>
</CustomField>